--- a/gym-UI/src/app/shared/layouts/main-layout/sidebars/receptionist-sidebar/receptionist-sidebar.component.scss
+++ b/gym-UI/src/app/shared/layouts/main-layout/sidebars/receptionist-sidebar/receptionist-sidebar.component.scss
@@ -1,2 +1,22 @@
 @use "../owner-sidebar/owner-sidebar.component.scss";
 
+:host {
+  display: block;
+}
+
+.nav-scroll-wrapper {
+  overflow-y: auto;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  .sidebar:hover & {
+    scrollbar-width: thin;
+    &::-webkit-scrollbar {
+      display: block;
+      width: 4px;
+    }
+  }
+}
+
